# imgsmean

./: CMakeLists.txt  README.md
tools/imgsmean/: imgsmean.c
